[workspace]
resolver = "2"

members = [
    "backoff_retry",
    "solana_blockstore",
    "clap",
    "dylib",
    "macro",
    "threads",
    "trait",
    "grpc_health",
    "tokio_demo",
    "log_demo",
    "axum_webserver_demo",
    "axum_wsserver_demo",
    "axum_ws_proxy",
    "features_enabled_test",
    "axum_ws_ratelimit",
    "dashmap_demo",
    "mockall_demo",
    "prometheus_metrics",
    "axum_ws_room_prometheus",
    "rayon_demo",
    "cli_pattern",
    "aws_dynamodb_kms_demo",
    "wallet_socket_demo",
    "wasm_demo",
]

[profile.release]
debug = true
lto = true
codegen-units = 1
