[workspace]
resolver = "2"

members = [
    "aws_dynamodb_kms_demo",
    "axum_nest_demo",
    "axum_webserver_demo",
    "axum_ws_proxy",
    "axum_ws_ratelimit",
    "axum_ws_room_prometheus",
    "axum_wsserver_demo",
    "backoff_retry",
    "clap",
    "cli_pattern",
    "dashmap_demo",
    "dylib",
    "features_enabled_test",
    "grpc_health",
    "log_demo",
    "macro",
    "mockall_demo",
    "prometheus_metrics",
    "rayon_demo",
    "solana_blockstore",
    "threads",
    "tokio_demo",
    "trait",
    "wallet_socket_demo",
    "wasm_demo",
]

[profile.release]
debug = true
lto = true
codegen-units = 1
