[package]
name = "aws_dynamodb_kms_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aws-dynamodb-create-table"
path = "bin/create-table.rs"

[[bin]]
name = "aws-dynamodb-add-item"
path = "bin/add-item.rs"

[dependencies]
aws-config = "0.56.0"
aws-sdk-dynamodb = "0.29.0"
clap = { version = "4.3.10", features = ["derive"] }
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["full"] }
