[package]
name = "axum_ws_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "axum-ws-proxy"
path = "src/main.rs"

[dependencies]
#axum = { version = "0.7.1", features = ["ws"] }
tokio = { version = "1.34.0", features = ["full"] }
