[package]
name = "axum_ws_ratelimit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
axum = { version = "0.6.11", features = ["ws", "headers"] }
dashmap = "5.4.0"
env_logger = "0.10.0"
log = "0.4.17"
tokio = { version = "1.26.0", features = ["full"] }
