[package]
name = "axum_ws_room_prometheus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["ws", "macros"] }
dashmap = "5"
env_logger = "0.10.0"
futures = "0.3"
hyper = { version = "0.14.26", features = ["server"] }
lazy_static = "1.4.0"
prometheus = "0.13.3"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
anyhow = "1"
fake-socket= "0.2"

[build-dependencies]
anyhow = "1"
cargo-lock = "9.0.0"
git-version = "0.3.5"
vergen = "=7.2.1"
