[package]
name = "axum_ws_room_prometheus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.1", features = ["ws", "macros"] }
dashmap = "5.5.3"
env_logger = "0.10.1"
futures = "0.3.29"
hyper = { version = "1.0.1", features = ["server"] }
lazy_static = "1.4.0"
prometheus = "0.13.3"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"

[dev-dependencies]
anyhow = "1"
fake-socket= "0.2"

[build-dependencies]
anyhow = "1"
cargo-lock = "9.0.0"
git-version = "0.3.8"
vergen = { version = "8.3.1", features = ["build", "git", "gitcl", "rustc", "cargo"] }