[package]
name = "axum_wsserver_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "axum-wsserver"
path = "src/main.rs"

[dependencies]
axum = { version = "0.6.7", features = ["ws", "headers"] }
axum-macros = "0.3.4"
env_logger = "0.10.0"
headers = "0.3.8"
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.93" }
tokio = { version = "1.25.0", features = ["full"] }

[dev-dependencies]
fake-socket = "0.2.0"
