[package]
name = "axum_wsserver_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "axum-wsserver"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7.1", features = ["ws"] }
axum-macros = "0.4.0"
axum-extra = { version = "0.9.0", features = ["typed-header"] }
env_logger = "0.10.1"
futures = "0.3.29"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
headers = "0.3"
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108" }
tokio = { version = "1.34.0", features = ["full"] }

[dev-dependencies]
fake-socket = "0.2.0"
anyhow = "1.0.75"
