[package]
name = "grpc_health"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "grpc-health-client-watch"
path = "src/bin/client.rs"

[[bin]]
name = "grpc-health-server"
path = "src/main.rs"

[dependencies]
prost = "0.12.3"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.10.2"
tonic-health = "0.10.2"

[build-dependencies]
tonic-build = { version = "0.10.2", features = ["prost"] }

[package.metadata.cargo-machete]
ignored = ["prost"]