[package]
name = "example-prometheus-metrics"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.7.1" }
metrics = "0.21.1"
metrics-exporter-prometheus = "0.12.1"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
