[package]
name = "websocket_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "web-server"
path = "webserver/main.rs"

[dependencies]
axum = "0.6.7"
axum-macros = "0.3.4"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.93" }
tokio = { version = "1.25.0", features = ["full"] }

[dev-dependencies]
fake-socket = "0.2.0"
